// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadScheduleButton with inputs for defaults should render properly 1`] = `
<DropdownButton
  alignRight={true}
  as={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "role": "group",
        "toggle": false,
        "vertical": false,
      },
      "displayName": "ButtonGroup",
      "render": [Function],
    }
  }
  className="dropdown-toggle-no-arrow download-schedule-button-test"
  data-cy="clk:download"
  title={
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className=""
      fade={false}
      fixedWidth={false}
      flip={false}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f019",
            "M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V274.7l-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7V32zM64 352c-35.3 0-64 28.7-64 64v32c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V416c0-35.3-28.7-64-64-64H346.5l-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352H64zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z",
          ],
          "iconName": "download",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title="scheduler:download_schedule-translated"
      titleId={null}
      transform={null}
    />
  }
  variant="outline-secondary"
>
  <DropdownHeader
    role="heading"
  >
    <strong>
      common:download-translated
      ...
    </strong>
  </DropdownHeader>
  <DropdownItem
    as={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "SafeAnchor",
        "render": [Function],
      }
    }
    data-cy="clk:download-ical"
    disabled={true}
    onClick={[Function]}
  >
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className="text-secondary mr-2"
      fade={false}
      fixedWidth={true}
      flip={false}
      icon={
        Object {
          "icon": Array [
            448,
            512,
            Array [
              "calendar-alt",
            ],
            "f073",
            "M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zm64 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm128 0v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H336zM64 400v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H208zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H336c-8.8 0-16 7.2-16 16z",
          ],
          "iconName": "calendar-days",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
    common:ical-translated
  </DropdownItem>
  <DropdownItem
    as={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "SafeAnchor",
        "render": [Function],
      }
    }
    data-cy="clk:download-json"
    disabled={true}
    onClick={[Function]}
  >
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className="text-secondary mr-2"
      fade={false}
      fixedWidth={true}
      flip={false}
      icon={
        Object {
          "icon": Array [
            384,
            512,
            Array [],
            "f1c9",
            "M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM153 289l-31 31 31 31c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L71 337c-9.4-9.4-9.4-24.6 0-33.9l48-48c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9zM265 255l48 48c9.4 9.4 9.4 24.6 0 33.9l-48 48c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l31-31-31-31c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0z",
          ],
          "iconName": "file-code",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
    common:json-translated
  </DropdownItem>
  <DropdownItem
    as={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "SafeAnchor",
        "render": [Function],
      }
    }
    data-cy="clk:download-csv"
    disabled={true}
    onClick={[Function]}
  >
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className="text-secondary mr-2"
      fade={false}
      fixedWidth={true}
      flip={false}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f6dd",
            "M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384V304H176c-35.3 0-64 28.7-64 64V512H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM200 352h16c22.1 0 40 17.9 40 40v8c0 8.8-7.2 16-16 16s-16-7.2-16-16v-8c0-4.4-3.6-8-8-8H200c-4.4 0-8 3.6-8 8v80c0 4.4 3.6 8 8 8h16c4.4 0 8-3.6 8-8v-8c0-8.8 7.2-16 16-16s16 7.2 16 16v8c0 22.1-17.9 40-40 40H200c-22.1 0-40-17.9-40-40V392c0-22.1 17.9-40 40-40zm133.1 0H368c8.8 0 16 7.2 16 16s-7.2 16-16 16H333.1c-7.2 0-13.1 5.9-13.1 13.1c0 5.2 3 9.9 7.8 12l37.4 16.6c16.3 7.2 26.8 23.4 26.8 41.2c0 24.9-20.2 45.1-45.1 45.1H304c-8.8 0-16-7.2-16-16s7.2-16 16-16h42.9c7.2 0 13.1-5.9 13.1-13.1c0-5.2-3-9.9-7.8-12l-37.4-16.6c-16.3-7.2-26.8-23.4-26.8-41.2c0-24.9 20.2-45.1 45.1-45.1zm98.9 0c8.8 0 16 7.2 16 16v31.6c0 23 5.5 45.6 16 66c10.5-20.3 16-42.9 16-66V368c0-8.8 7.2-16 16-16s16 7.2 16 16v31.6c0 34.7-10.3 68.7-29.6 97.6l-5.1 7.7c-3 4.5-8 7.1-13.3 7.1s-10.3-2.7-13.3-7.1l-5.1-7.7c-19.3-28.9-29.6-62.9-29.6-97.6V368c0-8.8 7.2-16 16-16z",
          ],
          "iconName": "file-csv",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
    common:csv-translated
  </DropdownItem>
</DropdownButton>
`;

exports[`DownloadScheduleButton with minimum inputs should render properly 1`] = `
<DropdownButton
  alignRight={true}
  as={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "role": "group",
        "toggle": false,
        "vertical": false,
      },
      "displayName": "ButtonGroup",
      "render": [Function],
    }
  }
  className="dropdown-toggle-no-arrow"
  data-cy="clk:download"
  title={
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className=""
      fade={false}
      fixedWidth={false}
      flip={false}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f019",
            "M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V274.7l-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7V32zM64 352c-35.3 0-64 28.7-64 64v32c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V416c0-35.3-28.7-64-64-64H346.5l-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352H64zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z",
          ],
          "iconName": "download",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title="scheduler:download_schedule-translated"
      titleId={null}
      transform={null}
    />
  }
  variant="outline-secondary"
>
  <DropdownHeader
    role="heading"
  >
    <strong>
      common:download-translated
      ...
    </strong>
  </DropdownHeader>
  <DropdownItem
    as={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "SafeAnchor",
        "render": [Function],
      }
    }
    data-cy="clk:download-ical"
    disabled={false}
    onClick={[Function]}
  >
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className="text-secondary mr-2"
      fade={false}
      fixedWidth={true}
      flip={false}
      icon={
        Object {
          "icon": Array [
            448,
            512,
            Array [
              "calendar-alt",
            ],
            "f073",
            "M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zm64 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm128 0v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H336zM64 400v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H208zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H336c-8.8 0-16 7.2-16 16z",
          ],
          "iconName": "calendar-days",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
    common:ical-translated
  </DropdownItem>
  <DropdownItem
    as={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "SafeAnchor",
        "render": [Function],
      }
    }
    data-cy="clk:download-json"
    disabled={false}
    onClick={[Function]}
  >
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className="text-secondary mr-2"
      fade={false}
      fixedWidth={true}
      flip={false}
      icon={
        Object {
          "icon": Array [
            384,
            512,
            Array [],
            "f1c9",
            "M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM153 289l-31 31 31 31c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0L71 337c-9.4-9.4-9.4-24.6 0-33.9l48-48c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9zM265 255l48 48c9.4 9.4 9.4 24.6 0 33.9l-48 48c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l31-31-31-31c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0z",
          ],
          "iconName": "file-code",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
    common:json-translated
  </DropdownItem>
  <DropdownItem
    as={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "SafeAnchor",
        "render": [Function],
      }
    }
    data-cy="clk:download-csv"
    disabled={false}
    onClick={[Function]}
  >
    <FontAwesomeIcon
      beat={false}
      beatFade={false}
      border={false}
      bounce={false}
      className="text-secondary mr-2"
      fade={false}
      fixedWidth={true}
      flip={false}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f6dd",
            "M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384V304H176c-35.3 0-64 28.7-64 64V512H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM200 352h16c22.1 0 40 17.9 40 40v8c0 8.8-7.2 16-16 16s-16-7.2-16-16v-8c0-4.4-3.6-8-8-8H200c-4.4 0-8 3.6-8 8v80c0 4.4 3.6 8 8 8h16c4.4 0 8-3.6 8-8v-8c0-8.8 7.2-16 16-16s16 7.2 16 16v8c0 22.1-17.9 40-40 40H200c-22.1 0-40-17.9-40-40V392c0-22.1 17.9-40 40-40zm133.1 0H368c8.8 0 16 7.2 16 16s-7.2 16-16 16H333.1c-7.2 0-13.1 5.9-13.1 13.1c0 5.2 3 9.9 7.8 12l37.4 16.6c16.3 7.2 26.8 23.4 26.8 41.2c0 24.9-20.2 45.1-45.1 45.1H304c-8.8 0-16-7.2-16-16s7.2-16 16-16h42.9c7.2 0 13.1-5.9 13.1-13.1c0-5.2-3-9.9-7.8-12l-37.4-16.6c-16.3-7.2-26.8-23.4-26.8-41.2c0-24.9 20.2-45.1 45.1-45.1zm98.9 0c8.8 0 16 7.2 16 16v31.6c0 23 5.5 45.6 16 66c10.5-20.3 16-42.9 16-66V368c0-8.8 7.2-16 16-16s16 7.2 16 16v31.6c0 34.7-10.3 68.7-29.6 97.6l-5.1 7.7c-3 4.5-8 7.1-13.3 7.1s-10.3-2.7-13.3-7.1l-5.1-7.7c-19.3-28.9-29.6-62.9-29.6-97.6V368c0-8.8 7.2-16 16-16z",
          ],
          "iconName": "file-csv",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      maskId={null}
      pull={null}
      pulse={false}
      rotation={null}
      shake={false}
      size={null}
      spin={false}
      spinPulse={false}
      spinReverse={false}
      swapOpacity={false}
      symbol={false}
      title=""
      titleId={null}
      transform={null}
    />
    common:csv-translated
  </DropdownItem>
</DropdownButton>
`;
